# SSH-Hybrid-Spectral-Safety-Horizons-for-Hybrid-SSM-Transformer-Models

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.json
paper/: main.tex
results/cpu_validation/: distance_decay.csv  validation_results.json
ssh_hybrid/: __init__.py
ssh_hybrid/audit/: __init__.py  procedure.py
ssh_hybrid/evaluation/: __init__.py  benchmarks.py  chss.py  hispa.py  safety_margin.py  stats.py
ssh_hybrid/experiments/: __init__.py  exp1_spectral_radius.py  exp2_theorem_validation.py  exp3_mbca_coverage.py  exp4_audit_validation.py  exp5_k_sensitivity.py  exp6_distance_decay.py  exp7_mbca_asr.py  run_cpu_validation.py
ssh_hybrid/mbca/: __init__.py  monitor.py  probes.py  register.py
ssh_hybrid/models/: __init__.py  config.py  loader.py
ssh_hybrid/spectral/: __init__.py  horizon.py  margin.py  radius.py
tests/: test_audit.py  test_chss.py  test_distance_decay.py  test_mbca.py  test_probes.py  test_safety_margin.py  test_spectral.py
