[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-hybrid"
version = "0.1.0"
description = "Spectral Safety Horizons for Hybrid SSM-Transformer Models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "wandb>=0.16.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
mamba = ["mamba-ssm>=2.0.0"]
eval = ["lm-eval>=0.4.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ssh_hybrid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
